[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "kernel"
test = false
bench = false

[dependencies]
bootloader_api = "0.11"
bootloader-x86_64-common = "0.11"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"